--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Raíces De Fe</title>
-  <meta name="title" content="Raíces de Fe - Amazing & Delicious Food">
+  <title>Un Sentir</title>
+  <meta name="title" content="Un Sentir - Amazing & Delicious Food">
   <meta name="description" content="This is a Restaurant html template made by codewithsadee">
 
   <!-- 
@@ -47,7 +47,7 @@
 
   <div class="preload" data-preaload>
     <div class="circle"></div>
-    <p class="text">Raíces De Fe</p>
+    <p class="text">Un Sentir</p>
   </div>
 
 
@@ -110,7 +110,7 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets/images/raíces.png" width="240" height="80" alt="Raíces de Fe - Home">
+        <img src="./assets/images/logo2.png" width="240" height="80" alt="Un Sentir - Home">
       </a>
 
       <nav class="navbar" data-navbar>
@@ -228,7 +228,7 @@
               <img src="./assets/images/img1.jpg" width="1880" height="950" alt="" class="img-cover">
             </div>
 
-            <p class="label-2 section-subtitle slider-reveal">Raíces de Fe</p>
+            <p class="label-2 section-subtitle slider-reveal">Un Sentir</p>
 
             <h1 class="display-1 hero-title slider-reveal">
               Conectando Iglesias <br>
@@ -253,7 +253,7 @@
               <img src="./assets/images/img2.jpg" width="1880" height="950" alt="" class="img-cover">
             </div>
 
-            <p class="label-2 section-subtitle slider-reveal">Raíces de Fe</p>
+            <p class="label-2 section-subtitle slider-reveal">Un Sentir</p>
 
             <h1 class="display-1 hero-title slider-reveal">
               Conectados para servir <br>
@@ -322,12 +322,12 @@
       <section class="section service bg-black-10 text-center" aria-label="service" id="service">
         <div class="container">
 
-          <p class="section-subtitle label-2">Raíces De Fe</p>
+          <p class="section-subtitle label-2">Un Sentir</p>
 
           <h2 class="headline-1 section-title">Nuestros Servicios</h2>
 
           <p class="section-text">
-            En Raíces de Fe, ofrecemos una plataforma integral diseñada para fortalecer la unidad entre las Iglesias de Cristo y facilitar el acceso a información relevante para la comunidad cristiana. Nuestros servicios incluyen:
+            En Un Sentir, ofrecemos una plataforma integral diseñada para fortalecer la unidad entre las Iglesias de Cristo y facilitar el acceso a información relevante para la comunidad cristiana. Nuestros servicios incluyen:
           </p>
 
           <ul class="grid-list">
@@ -422,10 +422,10 @@
 
             <p class="label-2 section-subtitle" id="about-label">Sobre Nosotros</p>
 
-            <h2 class="headline-1 section-title">Raíces de Fe</h2>
+            <h2 class="headline-1 section-title">Un Sentir</h2>
 
             <p class="section-text">
-              Raíces de Fe conecta iglesias y fortalece la comunidad cristiana con un directorio, noticias, eventos y recursos espirituales. También ofrecemos productos bíblicos como ropa, cursos y material de estudio para crecer en la fe.
+              Un Sentir conecta iglesias y fortalece la comunidad cristiana con un directorio, noticias, eventos y recursos espirituales. También ofrecemos productos bíblicos como ropa, cursos y material de estudio para crecer en la fe.
             </p>
 
             <div class="contact-label">Contáctanos</div>
@@ -636,7 +636,7 @@
       <section class="section features text-center" aria-label="features">
         <div class="container">
 
-          <p class="section-subtitle label-2">Raíces De Fe</p>
+          <p class="section-subtitle label-2">Un Sentir</p>
 
           <h2 class="headline-1 section-title">Iglesias Afiliadas</h2>
 
