--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     - primary meta tags
   -->
   <title>Un Sentir</title>
-  <meta name="title" content="Un Sentir - Amazing & Delicious Food">
-  <meta name="description" content="This is a Restaurant html template made by codewithsadee">
+  <meta name="title" content="Un Sentir">
+  <meta name="description" content="Conectados para servir unidos para amar.">
 
   <!-- 
     - favicon
