--- a/index.html
+++ b/index.html
@@ -649,9 +649,9 @@
                   <img src="./assets/images/features-icon-1.png" width="100" height="80" loading="lazy" alt="icon">
                 </div>
 
-                <h3 class="title-2 card-title">Hygienic Food</h3>
+                <h3 class="title-2 card-title">Jesús El Buen Camino</h3>
 
-                <p class="label-1 card-text">Lorem Ipsum is simply dummy printing and typesetting.</p>
+                <p class="label-1 card-text">La iglesia de los niños, la juventud y la familia</p>
 
               </div>
             </li>
@@ -663,9 +663,9 @@
                   <img src="./assets/images/features-icon-2.png" width="100" height="80" loading="lazy" alt="icon">
                 </div>
 
-                <h3 class="title-2 card-title">Fresh Environment</h3>
+                <h3 class="title-2 card-title">Iglesia 2 de Mayo LADP</h3>
 
-                <p class="label-1 card-text">Lorem Ipsum is simply dummy printing and typesetting.</p>
+                <p class="label-1 card-text">Iglesia cristiana Evangélica</p>
 
               </div>
             </li>
@@ -677,9 +677,9 @@
                   <img src="./assets/images/features-icon-3.png" width="100" height="80" loading="lazy" alt="icon">
                 </div>
 
-                <h3 class="title-2 card-title">Skilled Chefs</h3>
+                <h3 class="title-2 card-title">Iglesia Vida Nueva en Cristo </h3>
 
-                <p class="label-1 card-text">Lorem Ipsum is simply dummy printing and typesetting.</p>
+                <p class="label-1 card-text">Iglesia cristiana evangélica perteneciente a la organización centro Cristiano con sede principal en Cuervanaca</p>
 
               </div>
             </li>
@@ -691,9 +691,9 @@
                   <img src="./assets/images/features-icon-4.png" width="100" height="80" loading="lazy" alt="icon">
                 </div>
 
-                <h3 class="title-2 card-title">Event & Party</h3>
+                <h3 class="title-2 card-title">Iglesia Misionera Casa de Oración para todas las Naciones</h3>
 
-                <p class="label-1 card-text">Lorem Ipsum is simply dummy printing and typesetting.</p>
+                <p class="label-1 card-text">Iglesia Evangélica</p>
 
               </div>
             </li>
@@ -735,7 +735,7 @@
         <div class="footer-brand has-before has-after">
 
           <a href="#" class="logo">
-            <img src="./assets/images/raíces.png" width="250" height="50" loading="lazy" alt="grilli home">
+            <img src="./assets/images/logo.png" width="250" height="50" loading="lazy" alt="grilli home">
           </a>
 
           <address class="body-4">
