--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </button>
 
         <a href="#" class="logo">
-          <img src="./assets/images/raíces.png" width="160" height="50" alt="Raíces de - Home">
+          <img src="./assets/images/logo2.png" width="160" height="50" alt="Raíces de - Home">
         </a>
 
         <ul class="navbar-list">
